Alta juego funcionando al 100%

--- a/GuiaJuego/nbproject/private/private.properties
+++ b/GuiaJuego/nbproject/private/private.properties
@@ -3,8 +3,8 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
 index.file=index.php
-remote.connection=LAMP97-b01f3d
+remote.connection=LAMP-bbcb45
 remote.directory=/GuiaJuego
 remote.upload=ON_SAVE
 run.as=REMOTE
-url=http://192.168.1.12/GuiaJuego/
+url=http://192.168.88.27/GuiaJuego/
